# inventiv-agents

./: .dockerignore  .env.bak  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.rust  Dockerfile.rust.prod  MERGE_ANALYSIS_V1.0.0.md  MERGE_ANALYSIS_V1.0.0_FINAL.md  MERGE_SUMMARY_V1.0.0.md  Makefile  README.md  SECURITY.md  SESSION_RECAP.md  TODO.md  docker-compose.mock-runtime-real.yml  docker-compose.mock-runtime.yml  docker-compose.yml  images_response.json  package-lock.json  package.json
backend/: Cargo.toml
deploy/: Caddyfile  docker-compose.deploy.yml  docker-compose.nginx.yml
docs/: ACTION_TYPES_FORMAT.md  AGENT_VERSION_MANAGEMENT.md  ANALYSE_LOGS_INSTANCE_FAILED.md  ANALYSE_MODULARISATION_MAIN_RS.md  API_URL_CONFIGURATION.md  CHAT_SESSIONS_AND_INFERENCE.md  CI_CD.md  CONTRIBUTING.md  DATA_VOLUME_RECOMMENDATION_SYNC.md  DEPLOYMENT_STAGING.md  DEVELOPMENT_SETUP.md  DEV_SETUP_CHECKLIST.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  ENDPOINTS_INVENTORY.md  FLUX_ARCHITECTURE_MAP.md  FRONTEND_INVITATIONS_ANALYSIS.md  IADATA_TABLE_GUIDE.md  INSTANCE_TYPE_FILTERING_PROPOSAL.md  INSTANCE_TYPE_ZONES_COMPLETE.md  INSTANCE_TYPE_ZONES_IMPLEMENTATION.md  INVENTIV_DATA_TABLE.md  MOCK_REAL_VLLM_IMPLEMENTATION.md  MOCK_REAL_VLLM_USAGE.md  MONITORING_IMPROVEMENTS.md  MULTI_TENANT_MIGRATION_TRACKER.md  MULTI_TENANT_NEXT_STEPS.md  MULTI_TENANT_ROADMAP.md  MULTI_TENANT_STATUS_2025.md  MULTI_WORKTREE_DB_CONFIG.md  MULTI_WORKTREE_SETUP.md  OBSERVABILITY_ANALYSIS.md  PHASE1_REALIGNMENT.md  PHASE2_SCOPING_INSTANCES_PLAN.md  PLATFORM_COMPATIBILITY.md  PROVIDER_SETTINGS_MULTI_TENANT_PLAN.md  PROVISIONING_VOLUME_SIZE.md  README.md  SCALEWAY_PROVISIONING.md  SESSION_ARCHITECTURE_PROPOSAL.md  SESSION_CLOSE_20260107.md  (+23 more)
env/: dev.env.bak  dev.env.example  prod.env.example  staging.env.example
inventiv-api/: Cargo.toml  build.rs  reconciliation_endpoint.rs.tmp
inventiv-api/src/: action_logs_endpoint.rs  action_logs_search.rs  api_docs.rs  api_keys.rs  audit_log.rs  auth.rs  auth_endpoints.rs  bootstrap_admin.rs  chat.rs  email.rs  finops.rs  instance_type_zones.rs  lib.rs  locales_endpoint.rs  main.rs  metrics.rs  openai_proxy.rs  organizations.rs  password_reset.rs  progress.rs  provider_settings.rs  rbac.rs  settings.rs  simple_logger.rs  user_locale.rs  users_endpoint.rs  version.rs  workbench.rs  worker_routing.rs
inventiv-api/src/app/: mod.rs  state.rs
inventiv-api/src/config/: database.rs  mod.rs  redis.rs
inventiv-api/src/handlers/: commands.rs  deployments.rs  events.rs  instances.rs  mod.rs  models.rs  monitoring.rs  openai.rs  worker.rs
inventiv-api/src/routes/: mod.rs  openai.rs  protected.rs  public.rs  workbench.rs  worker.rs
inventiv-api/src/setup/: migrations.rs  mod.rs  seeding.rs
inventiv-api/tests/: README.md  auth_test.rs  deployments_test.rs  instances_test.rs  integration_e2e.rs
inventiv-api/tests/common/: e2e.rs  mod.rs
inventiv-backend/: Cargo.toml
inventiv-backend/src/: api_docs.rs  main.rs  settings.rs
inventiv-common/: Cargo.toml
inventiv-common/src/: bus.rs  lib.rs  worker_storage.rs  worker_target.rs
inventiv-finops/: Cargo.toml  build.rs
inventiv-finops/src/: main.rs
inventiv-frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
inventiv-orchestrator/: Cargo.toml  reconciliation_background.rs.tmp
inventiv-orchestrator/src/: finops_events.rs  health_check.rs  health_check_flow.rs  health_check_job.rs  logger.rs  main.rs  migrations.rs  models.rs  provider.rs  provider_manager.rs  provisioning_job.rs  reconciliation.rs  recovery_job.rs  services.rs  state_machine.rs  terminator_job.rs  volume_reconciliation_job.rs  watch_dog_job.rs  worker_storage.rs
inventiv-orchestrator/src/providers/: mock.rs  mod.rs  scaleway.rs
inventiv-providers/: Cargo.toml
inventiv-providers/src/: lib.rs  mock.rs  scaleway.rs
inventiv-router/: Cargo.toml
inventiv-router/src/: main.rs
inventiv-worker/: Dockerfile  Dockerfile.agent  agent.py  mock_vllm.py
inventiv-worker-mock/: Dockerfile.mock-vllm  mock_vllm.py
llm-infra/: Cargo.toml  Dockerfile.rust  Makefile  README.md  docker-compose.yml
llm-infra/router/: Cargo.toml
migrations/: 20240101000000_init_schema.sql  20251212130000_add_cost_and_archive.sql  20251212140000_add_catalog_settings.sql  20251212150000_add_error_tracking.sql  20251212160000_add_health_check_columns.sql  20251212170000_create_action_logs.sql  20251213200000_detailed_hardware_specs.sql  20251213214500_add_providers_active_flag.sql  seeds.sql  seeds_scaleway.sql  seeds_scaleway_full.sql
orchestrator/: Cargo.toml
router/: Cargo.toml
scripts/: check_db_status.sh  check_dev_setup.sh  check_multi_worktree.sh  check_no_private_keys.sh  check_ui_versions.mjs  debug_staging.sh  deploy_remote.sh  dev_expose_api_loopback.sh  dev_reset_catalog.sql  dev_worker_local.sh  docker_prune_project_old.sh  ghcr_login.sh  ghcr_token_local.sh  lego_volume_export.sh  lego_volume_import.sh  mock_runtime_down.sh  mock_runtime_sync.sh  mock_runtime_up.sh  mock_runtime_watch.sh  monitor_provisioning.sh  remote_bootstrap.sh  remote_set_secret.sh  remote_sync_secrets.sh  reset_admin_password.sh  run_session_tests.sh  scan_scaleway_volumes.sh  scw_instance_destroy.sh  scw_instance_provision.sh  ssh_detect_user.sh  sync_ui_versions.mjs  test_architecture.sh  test_provisioning_step_by_step.sh  test_storage_management_scaleway.sh  test_worker_observability_mock.sh  test_worker_observability_mock_multi.sh  verify_ci_cd.sh
seeds/: catalog_seeds.sql  seeds.sql
sqlx-migrations-archive/: 20251212130000_add_cost_and_archive.sql  20251212140000_add_catalog_settings.sql  20251212150000_add_error_tracking.sql  20251212160000_add_health_check_columns.sql  20251213200000_detailed_hardware_specs.sql  20251214143000_add_archived_status.sql  (+7 more)
test-scaleway/: Cargo.toml  README.md  analyze_working_instance.rs  test_complete_validation.rs  test_exact_console_config.rs  test_resize_volume.rs  test_simple_with_image.rs  test_with_volume_in_request.rs
test-scaleway/src/: main.rs
worker/: agent.py
(+269 files in other folders)
