[package]
name = "inventiv-api"
version = "0.1.0"
edition = "2021"

[dependencies]
inventiv-common = { path = "../inventiv-common" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "time", "json", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
jsonwebtoken = "9.3"
time = { version = "0.3", features = ["serde"] }
tokio-stream = "0.1"
futures-util = "0.3"
rand = "0.8"
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls", "builder", "smtp-transport", "rustls-native-certs", "ring"] }
base64 = "0.21"
urlencoding = "2.1"
