[package]
name = "inventiv-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
inventiv-common = { path = "../inventiv-common" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "time", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
