[package]
name = "inventiv-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
inventiv-common = { path = "../inventiv-common" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "bigdecimal"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
async-trait = "0.1"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
redis = { version = "0.27", features = ["tokio-comp"] }
futures-util = "0.3"
bigdecimal = "0.3.0"
