[package]
name = "inventiv-router"
version = "0.1.0"
edition = "2021"

[dependencies]
inventiv-common = { path = "../inventiv-common" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
