[package]
name = "inventiv-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
inventiv-common = { path = "../common" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
