[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
